[package]
name = "ntos-redteam"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
blake3 = "1.5"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["full", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.28.0"
